# DIP-mcp

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  ask.py  docker-compose.yml  pyproject.toml  test_chat_pipeline.py  test_mcp_live.py
.streamlit/: config.toml
frontend/: app.py
src/dip_mcp/: __init__.py  config.py
src/dip_mcp/api/: __init__.py  client.py  models.py
src/dip_mcp/cli/: analyse.py  app.py  chat.py
src/dip_mcp/core/: __init__.py  analytics.py
src/dip_mcp/llm/: __init__.py  groq_client.py
src/dip_mcp/mcp/: server.py  tools.py
tests/: __init__.py  conftest.py
tests/api/: __init__.py  test_client.py  test_models.py
tests/core/: __init__.py  test_analytics.py
tests/llm/: __init__.py  test_groq_client.py
tests/mcp/: __init__.py  test_tools.py
