[tool.poetry]
name = "dip-mcp"
version = "0.1.0"
description = "Parliamentary group distribution analyser using the Bundestag DIP API and MCP"
authors = ["Indrasena Reddy <bhairapuchanduprasad@gmail.com>"]
readme = "README.md"
packages = [{include = "dip_mcp", from = "src"}]

[tool.poetry.dependencies]
python = ">=3.11,<4.0"
httpx = ">=0.27.0"
pydantic = ">=2.7.0"
pydantic-settings = ">=2.3.0"
mcp = ">=1.0.0"
groq = ">=0.9.0"
tenacity = ">=8.3.0"
typer = ">=0.12.0"
rich = ">=13.7.0"
anyio = ">=4.4.0"
streamlit = ">=1.35.0"
pandas = ">=2.0.0"

[tool.poetry.group.dev.dependencies]
pytest = ">=8.2.0"
pytest-asyncio = ">=0.23.0"
pytest-cov = ">=5.0.0"
pytest-mock = ">=3.14.0"
respx = ">=0.21.0"
mypy = ">=1.10.0"
ruff = ">=0.4.0"
bandit = ">=1.7.9"
pydocstyle = ">=6.3.0"

[tool.poetry.scripts]
dip-mcp = "dip_mcp.cli.app:app"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
disallow_untyped_defs = true

[tool.ruff]
target-version = "py311"
line-length = 88

[tool.ruff.lint]
select = ["E", "W", "F", "I", "B", "C4", "UP", "ARG", "SIM"]
ignore = ["E501"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.pydocstyle]
convention = "google"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
asyncio_mode = "auto"

[tool.coverage.run]
source = ["src"]
omit = ["*/cli/*", "*/conftest.py"]
